--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="loginPage">
   <h1>Login page</h1>
-  <form #loginForm="ngForm" (ngSubmit)="handleLogin(loginForm)">
+  <form #loginForm="ngForm" (ngSubmit)="handleLogin(loginForm)" class="form">
     <div>
       <label for="username">Username:</label>
       <input
