--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,82 @@
-<p>register works!</p>
+<div class="registrationPage">
+  <h1>Registration Page</h1>
+  <form
+    #registrationForm="ngForm"
+    (ngSubmit)="handleRegistration(registrationForm)"
+    class="form"
+  >
+    <div>
+      <label for="name">Name:</label>
+      <input
+        type="text"
+        id="name"
+        name="name"
+        [(ngModel)]="user.name"
+        required
+      />
+    </div>
+    <div>
+      <label for="phone">Phone:</label>
+      <input
+        type="text"
+        id="phone"
+        name="phone"
+        [(ngModel)]="user.phone"
+        required
+      />
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        [(ngModel)]="user.email"
+        required
+      />
+    </div>
+    <div>
+      <label for="address">Address:</label>
+      <input
+        type="text"
+        id="address"
+        name="address"
+        [(ngModel)]="user.address"
+        required
+      />
+    </div>
+    <div>
+      <label for="loginName">Username:</label>
+      <input
+        type="text"
+        id="loginName"
+        name="loginName"
+        [(ngModel)]="user.loginName"
+        required
+      />
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        [(ngModel)]="user.password"
+        required
+      />
+    </div>
+    <div>
+      <label for="panNumber">PAN Number:</label>
+      <input
+        type="text"
+        id="panNumber"
+        name="panNumber"
+        [(ngModel)]="user.panNumber"
+        required
+      />
+    </div>
+    <div>
+      <button type="submit">Register</button>
+    </div>
+  </form>
+</div>
